--- a/drawing-board-frontend/package.json
+++ b/drawing-board-frontend/package.json
@@ -6,6 +6,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
+    "rxjs": "^6.5.3",
     "simple-react-canvas": "0.0.1",
     "socket.io-client": "^2.3.0"
   },
